[project]
name = "java_docker_api"
version = "0.1.0"
description = "java_docker_api using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.150.0,<1.0.0"
]

[project.scripts]
java_docker_api = "java_docker_api.main:run"
run_crew = "java_docker_api.main:run"
train = "java_docker_api.main:train"
replay = "java_docker_api.main:replay"
test = "java_docker_api.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
